--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "jquery": "^3.3.1",
+    "semantic-ui-calendar": "0.0.8",
     "vue": "^2.5.11"
   },
   "browserslist": [
