--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^0.18.0",
     "jquery": "^3.3.1",
     "semantic-ui-calendar": "0.0.8",
-    "vue": "^2.5.11"
+    "vue": "^2.5.11",
+    "vue2-filters": "^0.4.1"
   },
   "browserslist": [
     "> 1%",
