--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "jquery": "^3.3.1",
     "semantic-ui-calendar": "0.0.8",
     "vue": "^2.5.11",
-    "vue2-filters": "^0.4.1"
   },
   "browserslist": [
     "> 1%",
@@ -29,6 +28,7 @@
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
+    "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
