--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "jquery": "^3.3.1",
-    "semantic-ui-calendar": "0.0.8",
-    "vue": "^2.5.11",
+    "vue": "^2.5.11"
   },
   "browserslist": [
     "> 1%",
